--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,8 @@
   <ItemGroup>
     <Compile Include="Assets/LibTS/Samples/Sample_Forward/Res/Sample_Forward_Transform.cs" />
     <Compile Include="Assets/LibTS/Scripts/Enums/Enum_TimeType.cs" />
+    <Compile Include="Assets/LibTS/Samples/Sample_Item/Item_Override/Res/ItemDescriber.cs" />
+    <Compile Include="Assets/LibTS/Samples/Sample_Item/Item_Override/Res/OverrideItemSample.cs" />
     <Compile Include="Assets/LibTS/Scripts/Informations/Coroutines/TransformCoroutineManager.cs" />
     <Compile Include="Assets/LibTS/Samples/Sample_Item/Item_Bundle/Res/ItemPrefabController.cs" />
     <Compile Include="Assets/LibTS/Scripts/Informations/Databases/BaseItem.cs" />
